--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ highlighter:      rouge
 permalink:        pretty
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:            LinHung Wei
+tagline:          'Human'
+description:      'I write things.'
 url:              https://adeline-wei.github.io
 baseurl:          /
 
